# csharp-scratch

./: CMakeLists.txt  README.md
basics/: main.cs
linq/: main.cs
oop/: main.cs
threading/: main.cs
